<resources>
    <string name="app_name">textil_shop</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_again">Password again</string>
    <string name="back">Back</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="desc">Desc.:</string>
    <string name="my_order">My orders</string>
    <string name="order">Order</string>
    <string name="description">Description</string>
    <string name="nameOrder">Name</string>
    <string name="price">Price</string>
    <string name="what">What?</string>
    <string name="how_many_yards">How many yards?</string>
    <string name="delete_this_order">Delete this Order</string>


</resources>